tests/ui/type-alias-impl-trait/issue-63355.stderr
error: item does not constrain `FooImpl::{opaque#0}`
  --> $DIR/issue-63355.rs:43:8
   |
LL |     fn bar() -> Self::Bar {
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-63355.rs:30:20
   |
LL | pub type FooImpl = impl Foo;
   |                    ^^^^^^^^

error: aborting due to 1 previous error

